--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-    <div id="loading">Loading...</div>
+   
+  <div id="loading" class="honeycomb">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
     <div style="display: none;" id="registration-form">
         <h1>Register Yourself:</h1>
         <input id="name" type="text" placeholder="Name" />
@@ -45,7 +54,7 @@
 
 
       <div id="welcome" style="display: none;">
-        <h1>Welcome, <span id ="nam">User's</span></h1>
+      <h1>Welcome <span id ="nam">User's</span></h1>
         <p>Which quiz would you like to attempt?</p>
     
         <div class="quiz-options">
@@ -56,6 +65,8 @@
     
         <button id="start-quiz">Start Quiz</button>
         <button id="logout-button">logout</button>
+        <button id="read">My Quiz History</button> 
+         <div id="results-container"></div> 
 
 
       </div>
