added google sign-in

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               <input type="password" id="login-password" name="password" placeholder="Enter your password" required>
             </div>
             <button id="login-button" class="login-btn">Log In</button>
+            <button id="google-signin-btn">Sign In with Google</button>
             <div class="footer">
               <p>Don't have an account? <a id="register" onclick="document.getElementById('login').style.display = 'none'; document.getElementById('registration-form').style.display = 'block'; "  href="#">Register Now!</a></p>
             </div>
